--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <title>
             SachinDenny
         </title>
+        <link rel="stylesheet" href="css/styles.css">
     </head>
     <body>
         <header>
