--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
         </header>
         <main>
             <p>
-                i love movies
+                I am Sachin Denny.
+            </p>
+            <p>
+                I love movies.
             </p>
         </main>
         <footer>
